--- a/Complain Management System.vcxproj.filters
+++ b/Complain Management System.vcxproj.filters
@@ -30,7 +30,7 @@
     <ClCompile Include="code\Director.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="code\Employee.cpp">
+    <ClCompile Include="code\Employe.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="code\Job.cpp">
@@ -59,7 +59,7 @@
     <ClInclude Include="code\Director.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="code\Employee.h">
+    <ClInclude Include="code\Employe.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="code\Job.h">
@@ -74,5 +74,8 @@
     <ClInclude Include="code\Teacher.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="cpp.hint" />
   </ItemGroup>
 </Project>
