--- a/Complain Management System.vcxproj.filters
+++ b/Complain Management System.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClCompile Include="code\Teacher.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="code\Person.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="code\Admin.h">
@@ -72,6 +75,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="code\Teacher.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="code\Person.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
