--- a/Complain Management System.vcxproj
+++ b/Complain Management System.vcxproj
@@ -21,24 +21,22 @@
   <ItemGroup>
     <ClCompile Include="code\Admin.cpp" />
     <ClCompile Include="code\Complaint.cpp" />
+    <ClCompile Include="code\Department.cpp" />
     <ClCompile Include="code\Director.cpp" />
     <ClCompile Include="code\Employee.cpp" />
     <ClCompile Include="code\main.cpp" />
     <ClCompile Include="code\Manager.cpp" />
-    <ClCompile Include="code\State.cpp" />
     <ClCompile Include="code\Teacher.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="code\Admin.h" />
     <ClInclude Include="code\Complaint.h" />
-    <ClInclude Include="code\DataBase.h" />
     <ClInclude Include="code\Department.h" />
     <ClInclude Include="code\Director.h" />
     <ClInclude Include="code\Employee.h" />
-    <ClInclude Include="code\Job.h" />
+    <ClInclude Include="code\Global.h" />
     <ClInclude Include="code\Manager.h" />
     <ClInclude Include="code\Person.h" />
-    <ClInclude Include="code\State.h" />
     <ClInclude Include="code\Teacher.h" />
   </ItemGroup>
   <ItemGroup>
