--- a/Complain Management System.vcxproj
+++ b/Complain Management System.vcxproj
@@ -24,6 +24,7 @@
     <ClCompile Include="code\Department.cpp" />
     <ClCompile Include="code\Director.cpp" />
     <ClCompile Include="code\Employee.cpp" />
+    <ClCompile Include="code\Global.cpp" />
     <ClCompile Include="code\main.cpp" />
     <ClCompile Include="code\Manager.cpp" />
     <ClCompile Include="code\Teacher.cpp" />
