--- a/Complain Management System.vcxproj.filters
+++ b/Complain Management System.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClCompile Include="code\Department.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="code\Global.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="code\Admin.h">
