added some functionalities of complaint

--- a/Complain Management System.vcxproj.filters
+++ b/Complain Management System.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClCompile Include="code\Global.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="code\Date.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="code\Admin.h">
@@ -69,6 +72,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="code\Global.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="code\Date.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
