--- a/Complain Management System.vcxproj
+++ b/Complain Management System.vcxproj
@@ -21,6 +21,7 @@
   <ItemGroup>
     <ClCompile Include="code\Admin.cpp" />
     <ClCompile Include="code\Complaint.cpp" />
+    <ClCompile Include="code\Date.cpp" />
     <ClCompile Include="code\Department.cpp" />
     <ClCompile Include="code\Director.cpp" />
     <ClCompile Include="code\Employee.cpp" />
@@ -32,6 +33,7 @@
   <ItemGroup>
     <ClInclude Include="code\Admin.h" />
     <ClInclude Include="code\Complaint.h" />
+    <ClInclude Include="code\Date.h" />
     <ClInclude Include="code\Department.h" />
     <ClInclude Include="code\Director.h" />
     <ClInclude Include="code\Employee.h" />
