--- a/Complain Management System.vcxproj.filters
+++ b/Complain Management System.vcxproj.filters
@@ -77,6 +77,9 @@
     <ClInclude Include="code\Date.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="code\Job.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="cpp.hint" />
